# mnist-on-workers

./: Cargo.toml  README.md  wrangler.toml
public/: index.html
src/: infer.rs  lib.rs  model.rs
