[package]
name = "mnist"
version = "0.1.0"
edition = "2021"
authors = [ "Steve James <sjames@cloudflare.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0" }
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
burn = { version = "0.15.0", default-features = false, features = ["ndarray"] }
serde_json = "1.0.120"